added some unit tests added pmd, checkstyle and jacoco done some refactoring